refactor: リポジトリ名をGitHub-Traffic-API-Laravelからgithub-analytics-laravelに変更
- 全ファイルのリポジトリ名参照を更新
- Dockerコンテナ名を変更: github-traffic-api-* → github-analytics-*
- Dockerボリューム名を変更: github-traffic-api_* → github-analytics_*
- デプロイディレクトリパスを更新: ~/deploy/github-traffic-api → ~/deploy/github-analytics
- アプリケーション名を更新: "GitHub Traffic API" → "GitHub Analytics"
- env.templateのREGISTRY_URLを新しいリポジトリ名に更新
- すべてのドキュメント参照を新しい命名に更新
- README.mdのタイトルとプロジェクトドキュメントのヘッダーを更新

--- a/_docs/document/プロジェクト構成ドキュメント.md
+++ b/_docs/document/プロジェクト構成ドキュメント.md
@@ -1,4 +1,4 @@
-# GitHub Traffic API Laravel プロジェクト構成ドキュメント
+# GitHub Analytics Laravel プロジェクト構成ドキュメント
 
 ## プロジェクト概要
 
@@ -24,7 +24,7 @@
 ## ディレクトリ構造
 
 ```
-GitHub-Traffic-API-Laravel/
+github-analytics-laravel/
 ├── _docs/                          # ドキュメント
 │   ├── assets/                     # ドキュメント用アセット
 │   └── *.md                        # 各種ドキュメント
@@ -94,7 +94,7 @@ GitHub-Traffic-API-Laravel/
 ### サービス構成
 
 #### 1. app (PHP-FPM)
-- **コンテナ名**: `github-traffic-api-backend`
+- **コンテナ名**: `github-analytics-backend`
 - **ベースイメージ**: `php:8.2.29-fpm`
 - **機能**:
   - Laravelアプリケーション実行
@@ -104,7 +104,7 @@ GitHub-Traffic-API-Laravel/
   - Supervisorによるプロセス管理
 
 #### 2. web (Nginx)
-- **コンテナ名**: `github-traffic-api-web`
+- **コンテナ名**: `github-analytics-web`
 - **ベースイメージ**: `nginx:1.18-alpine`
 - **機能**:
   - 静的ファイル配信
@@ -112,14 +112,14 @@ GitHub-Traffic-API-Laravel/
   - ポート: 80
 
 #### 3. db (MySQL)
-- **コンテナ名**: `github-traffic-api-db`
+- **コンテナ名**: `github-analytics-db`
 - **ベースイメージ**: `mysql:8.0.33-debian`
 - **機能**:
   - データベースサーバー
   - ポート: 3333 (ホスト) → 3306 (コンテナ)
 
 #### 4. node (Node.js)
-- **コンテナ名**: `github-traffic-api-node`
+- **コンテナ名**: `github-analytics-node`
 - **ベースイメージ**: `node:20.19-alpine`
 - **機能**:
   - フロントエンド資産のビルド
@@ -127,7 +127,7 @@ GitHub-Traffic-API-Laravel/
   - ポート: 5174 (ホスト) → 5173 (コンテナ)
 
 #### 5. phpmyadmin
-- **コンテナ名**: `github-traffic-api-phpmyadmin`
+- **コンテナ名**: `github-analytics-phpmyadmin`
 - **機能**:
   - データベース管理UI
   - ポート: 8091
